--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -53,11 +53,11 @@ Text=向左、向右旋转
 [ff609cc7-d34d-4049-a1aa-2293517ffcc6]
 Icon=imageres.dll,-5346
 ;固定到任务栏(&K)
-[90AA3A4E-1CBA-4233-B8BB-535773D48449]
+[90aa3a4e-1cba-4233-b8bb-535773d48449]
 Text=@*,-5386
 Icon=imageres.dll,-5354
 ;打开方式(&H)
-[09799AFB-AD67-11d1-ABCD-00C04FC30936]
+[09799afb-ad67-11d1-abcd-00c04fc30936]
 Text=@*,-5376
 Icon=imageres.dll,-5340
 ;复制为路径(&A)
@@ -68,14 +68,14 @@ Icon=imageres.dll,-5302
 Text=包含到库中(&I)
 Icon=imageres.dll,-1001
 ;固定到"开始"屏幕(&P)
-[470C0EBD-5D73-4d58-9CED-E91E22E23282]
+[470c0ebd-5d73-4d58-9ced-e91e22e23282]
 Text=@shell32.dll,-51201
 Icon=imageres.dll,-5376
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c8]
 Text=附到「开始」菜单(&U)
 Icon=imageres.dll,-80
 ;发送到(&N)
-[7BA4C740-9E81-11CF-99D3-00AA004AE837]
+[7ba4c740-9e81-11cf-99d3-00aa004ae837]
 Text=@*,-30312
 Icon=imageres.dll,-185
 ;下一个桌面背景(&N)
@@ -83,12 +83,12 @@ Icon=imageres.dll,-185
 Text=@*,-416
 Icon=imageres.dll,-5346
 ;新建(&W)
-[D969A300-E7FF-11d0-A93B-00A0C90F2719]
+[d969a300-e7ff-11d0-a93b-00a0c90f2719]
 Text=@*,-95851
 Icon=imageres.dll,-5307
 [6b9228da-9c15-419e-856c-19e768a13bdc]
 Text=Windows 小工具
-[A470F8CF-A1E8-4f65-8335-227475AA5C46]
+[a470f8cf-a1e8-4f65-8335-227475aa5c46]
 Text=加密(&Y)
 Icon=imageres.dll,-59
 ;共享
@@ -96,17 +96,17 @@ Icon=imageres.dll,-59
 Text=@*,-107
 Icon=ntshrui.dll,-123
 ;工作文件夹
-[E61BF828-5E63-4287-BEF1-60B1A4FDE0E3]
+[e61bf828-5e63-4287-bef1-60b1a4fde0e3]
 Text=@WorkfoldersControl.dll,-1
 Icon=WorkFolders.exe
 ;授予访问权限(&G)
 [f81e9010-6ea4-11ce-a7ff-00aa003ca9f6]
 Text=@*,-103
 ;始终脱机可用(&F)
-[474C98EE-CF3D-41f5-80E3-4AAB0AB04301]
+[474c98ee-cf3d-41f5-80e3-4aab0ab04301]
 Text=@*,-38
 ;增强的存储设备
-[2854F705-3548-414C-A113-93E27C808C85]
+[2854f705-3548-414c-a113-93e27c808c85]
 Text=@*,-101
 ;刻录到光盘(&T)
 [fbeb8a05-beee-4442-804e-409d6c4515e9]
@@ -115,13 +115,13 @@ Icon=imageres.dll,-30
 [59099400-57ff-11ce-bd94-0020af85b590]
 Text=复制磁盘(&Y)...
 ;便携设备菜单
-[D6791A63-E7E2-4fee-BF52-5DED8E86E9B8]
+[d6791a63-e7e2-4fee-bf52-5ded8e86e9b8]
 Text=@*,-511
 [0af96ede-aebf-41ed-a1c8-cf7a685505b6]
 Text=不在导航窗格中显示
 Icon=imageres.dll,-5359
 ;还原以前的版本(&V)
-[596AB062-B4D2-4215-9F74-E9109B0A8153]
+[596ab062-b4d2-4215-9f74-e9109b0a8153]
 Text=@*,-1037
 ;公文包
 [85bbd920-42a0-1069-a2e4-08002b30309d]
@@ -146,6 +146,8 @@ Icon=imageres.dll,-5303
 [3080f90e-d7ad-11d9-bd98-0000947b0257]
 Text=@shell32.dll,-12715
 Icon=imageres.dll
+[5635493f-7d77-4372-a839-8ad89f5b3726]
+Text=卸载(&U)
 
 ;----------------显卡------------------
 [a929c4ce-fd36-4270-b4f5-34ecac5bd63c]
@@ -154,45 +156,45 @@ Icon=nvcpl.dll
 [e97dec16-a50d-49bb-ae24-cf682282e08d]
 Text=更改 OpenGL 渲染 GPU...
 Icon=nvcpl.dll
-[3D1975AF-48C6-4f8e-A182-BE0E08FA86A9]
+[3d1975af-48c6-4f8e-a182-be0e08fa86a9]
 Text=NVIDIA 控制面板
 Icon=nvcpl.dll
-[9B5F5829-A529-4B12-814A-E81BCB8D93FC]
+[9b5f5829-a529-4b12-814a-e81bcb8d93fc]
 Text=英特尔® 显卡设置
-Icon=.\igfxEM.exe
+Icon=.\igfxTray.exe
 [3ab1675a-ccff-11d2-8b20-00a0c93cb1f4]
 Text=Intel 显卡
-[5E2121EE-0300-11D4-8D3B-444553540000]
+[5e2121ee-0300-11d4-8d3b-444553540000]
 Text=AMD 显卡
 Icon=.\RadeonSettings.exe
 
 ;----------------压缩------------------
-[5B69A6B4-393B-459C-8EBB-214237A9E7AC]
+[5b69a6b4-393b-459c-8ebb-214237a9e7ac]
 Text=Bandizip
 Icon=.\Bandizip.exe
-[9179176E-B763-3200-8500-BB1B90B3D5DE]
+[9179176e-b763-3200-8500-bb1b90b3d5de]
 Text=360zip
 Icon=.\360zip.exe
-[B41DB860-64E4-11D2-9906-E49FADC173CA]
+[b41db860-64e4-11d2-9906-e49fadc173ca]
 Text=WinRAR 64bit
-[B41DB860-8EE4-11D2-9906-E49FADC173CA]
+[b41db860-8ee4-11d2-9906-e49fadc173ca]
 Text=WinRAR 32bit
-[23170F69-40C1-278A-1000-000100020000]
+[23170f69-40c1-278a-1000-000100020000]
 Text=7-zip
 Icon=.\7zG.exe
-[B1832224-9F22-4965-A6E8-E6A6E3C4FDF7]
+[b1832224-9f22-4965-a6e8-e6a6e3c4fdf7]
 Text=52好压
 Icon=.\kzip_main.exe
-[5FED836A-C96C-4d88-A91E-F63F07726585]
+[5fed836a-c96c-4d88-a91e-f63f07726585]
 Text=2345好压
 Icon=.\HaoZip.exe
-[6ADF19E3-77A3-4395-ADB4-9FD7D351EB3E]
+[6adf19e3-77a3-4395-adb4-9fd7d351eb3e]
 Text=快压
-[903D855A-D671-4A8E-A592-9168755917DB]
+[903d855a-d671-4a8e-a592-9168755917db]
 Text=快压
-[6ADF19E3-77A3-4395-ADB4-9FD7D351EB3E]
+[6adf19e3-77a3-4395-adb4-9fd7d351eb3e]
 Text=快压
-[903D855A-D671-4A8E-A592-9168755917DB]
+[903d855a-d671-4a8e-a592-9168755917db]
 Text=快压
 [e0d79304-84be-11ce-9641-444553540000]
 Text=WinZip
@@ -238,50 +240,50 @@ Icon=.\WinArchiver.exe
 [1532b32d-3a75-4a4d-9b38-5a6000ea7045]
 Text=FreeArc
 Icon=..\FreeArc.exe
-[AD392E40-428C-459F-961E-9B147782D099]
+[ad392e40-428c-459f-961e-9b147782d099]
 Text=UltraISO
 Icon=.\UltraISO.exe
 [be86f80b-eb1a-45b4-b4b6-4b12d302b6bc]
 Text=AntZip
 
 ;----------------杀软------------------
-[09A47860-11B0-4DA5-AFA5-26D86198A780]
+[09a47860-11b0-4da5-afa5-26d86198a780]
 Text=Microsoft Defender
 Icon=.\EppManifest.dll
-[18A3E590-F219-4105-9079-93DAFA51B9D6]
+[18a3e590-f219-4105-9079-93dafa51b9d6]
 Text=使用火绒安全进行杀毒
-[9F012318-CAA5-402C-9BF6-28EB36F61496]
+[9f012318-caa5-402c-9bf6-28eb36f61496]
 Text=使用火绒安全粉碎文件
-[63332668-8CE1-445D-A5EE-25929176714E]
+[63332668-8ce1-445d-a5ee-25929176714e]
 Text=扫描病毒(电脑管家)
-[754DF2CE-51E8-4895-B53C-6381418B84AE]
+[754df2ce-51e8-4895-b53c-6381418b84ae]
 Text=文件粉碎(电脑管家)
-[CBDECEF7-7A29-4cbf-A009-2673D82C7BF9]
+[cbdecef7-7a29-4cbf-a009-2673d82c7bf9]
 Text=强力卸载(电脑管家)
 Icon=.\QQPCSoftMgr.exe
-[C5617F6A-39BB-436D-91CF-61C1B45DD688]
+[c5617f6a-39bb-436d-91cf-61c1b45dd688]
 Text=深度加速(管家小火箭)
 [b7667919-3765-4815-a66d-98a09be662d6]
 Text=清理垃圾(电脑管家)
-[086F171D-5ED1-4ED2-B736-CFF3AD6A128E]
+[086f171d-5ed1-4ed2-b736-cff3ad6a128e]
 Text=使用 360杀毒 扫描
 Icon=.\msdev.exe
-[7C0F6D57-E799-4C8A-A319-8E2B4D724CF0]
+[7c0f6d57-e799-4c8a-a319-8e2b4d724cf0]
 Text=360安全卫士
 Icon=..\360Safe.exe
-[5E19C0CE-C02C-46c2-98C3-A2E12EDE0E17]
+[5e19c0ce-c02c-46c2-98c3-a2e12ede0e17]
 Text=360强力卸载 && 桌面助手
 Icon=.\SoftMgr.exe
-[C4F75DB1-B9F4-425A-9F5B-778911BCF176]
+[c4f75db1-b9f4-425a-9f5b-778911bcf176]
 Text=2345扫描病毒 && 强力删除
 Icon=.\2345MPCSafe.exe
-[6B3BA4A8-EC7E-4714-9ECF-EB33995B3384]
+[6b3ba4a8-ec7e-4714-9ecf-eb33995b3384]
 Text=使用2345软件管家卸载软件
 Icon=..\..\2345SoftMgr.exe
-[DDEA5705-1BB0-4C03-AC1E-8FF9716A0D51]
+[ddea5705-1bb0-4c03-ac1e-8ff9716a0d51]
 Text=金山毒霸(64位)
 Icon=.\kismain.exe
-[D21D88E8-4123-48BA-B0B1-3FDBE4AE5FA4]
+[d21d88e8-4123-48ba-b0b1-3fdbe4ae5fa4]
 Text=金山毒霸(32位)
 Icon=.\kismain.exe
 [367f6ae2-6809-4bed-b09b-228893fb33dd]
@@ -289,7 +291,7 @@ Text=金山毒霸
 Icon=.\kismain.exe
 [758c684b-4d10-4bc1-90da-6bebf0b4e0b4]
 Text=使用联想电脑管家进行扫描
-[C49499AC-DC25-478B-B903-E005012B3DD1]
+[c49499ac-dc25-478b-b903-e005012b3dd1]
 Text=使用智量扫描
 Icon=.\WiseVector.exe
 [cca9efd3-29ed-430a-ba6d-e6bbff0a60c2]
@@ -318,14 +320,16 @@ Text=使用瑞星杀毒
 [0bb81440-5f42-4480-a5f7-770a6f439fc8]
 Text=IObit Malware Fighter
 Icon=*,3
+[b089fe88-fb52-11d3-bdf1-0050da34150d]
+Text=ESET Endpoint Antivirus
 
 ;----------------传输------------------
-[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
+[53d2405c-48ab-4c8a-8f59-ce0610f13bbc]
 Text=通过QQ发送到
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
 Text=OneDrive
 Icon=..\..\OneDrive.exe
-[6D85624F-305A-491d-8848-C1927AA0D790]
+[6d85624f-305a-491d-8848-c1927aa0d790]
 Text=上传到百度网盘
 Icon=.\BaiduNetdisk.exe
 [2008caf4-a5c1-4037-99a8-699e4d01456d]
@@ -340,12 +344,12 @@ Icon=..\115chrome.exe
 [171b6b53-17b1-40b7-afb2-a415b2b40401]
 Text=上传到腾讯微云
 Icon=..\..\..\..\..\..\..\WeiyunApp.exe
-[5D652B62-B702-496A-92BC-92C308251FEA]
+[5d652b62-b702-496a-92bc-92c308251fea]
 Text=坚果云
 Icon=*,3
-[67F4D210-BFC2-4ADD-9A2A-C9B9E1F42C4F]
+[67f4d210-bfc2-4add-9a2a-c9b9e1f42c4f]
 Text=上传到 “WPS云文档”
-[AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
+[aa147ffb-0b1f-4bb1-9b1e-8d062b35c145]
 Text=自动同步文件夹到 “WPS云文档”
 [970a26b5-2b84-4b60-8067-1440c229672d]
 Text=钉盘
@@ -358,7 +362,7 @@ Text=Dropbox
 [30351349-7b7d-4fcc-81b4-1e394ca267eb]
 Text=TortoiseSVN
 Icon=.\TortoiseIDiff.exe
-[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
+[10a0fdd2-b0c0-4cd4-a7ae-e594ce3b91c8]
 Text=TortoiseGit
 Icon=.\TortoiseGitProc.exe
 [2a535b11-6cfc-4e85-a75f-0e397b1584cf]
@@ -379,6 +383,9 @@ Text=广讯通发送文件
 Icon=.\GXT.exe
 [41b3b91f-d6b3-3430-bb86-a143f85353ca]
 Text=Huawei Share
+[1bca9901-05c3-4d01-8ad4-78da2eac9b3f]
+Text=使用小米互传发送
+Icon=.\FixServiceTool.exe
 
 ;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
@@ -392,13 +399,13 @@ Text=Adobe Acrobat
 Icon=..\Acrobat\Acrobat.exe
 [d25b2cab-8a9a-4517-a9b2-cb5f68a5a802]
 Text=转换为Adobe PDF(&B)
-[1ECDA7BF-4DFA-41D8-9380-1A27B26CFC41]
+[1ecda7bf-4dfa-41d8-9380-1a27b26cfc41]
 Text=使用WPS PDF编辑
 Icon=..\..\wpspdf.exe
-[E3ED4700-22D4-41B6-8144-E3F5F1AC5153]
+[e3ed4700-22d4-41b6-8144-e3f5f1ac5153]
 Text=使用WPS PDF编辑
 Icon=..\..\wpspdf.exe
-[AF1D7D2F-6AE8-4BAA-ABFA-738201F4871C]
+[af1d7d2f-6ae8-4baa-abfa-738201f4871c]
 Text=WPS Office PDF
 Icon=.\wpspdf.exe
 [b4e15cd0-f916-4c8e-830a-15e3e9d01a1b]
@@ -436,7 +443,7 @@ Text=使用“Windows Media Player”播放(&P)
 Text=使用 Media Player 播放(&P)
 [e598560b-28d5-46aa-a14a-8a3bea34b576]
 Text=幻灯片放映
-[9B6D38F3-8EF4-48A5-AD30-FFFFFFFFFFFF]
+[9b6d38f3-8ef4-48a5-ad30-ffffffffffff]
 Text=Honeyview
 Icon=.\Honeyview.exe
 [c2396f1e-4ba2-4b7d-857a-f764761c012b]
@@ -456,18 +463,24 @@ Text=图片工厂(&F)
 Text=调整图片大小(PowerToys)
 [5c6a637c-9780-4d0f-a379-4732edcce7c3]
 Text=网易云音乐
-[1F77B17B-F531-44DB-ACA4-76ABB5010A28]
+[1f77b17b-f531-44db-aca4-76abb5010a28]
 Text=AIMP
 Icon=..\AIMP.exe
 [8e7861bb-3a13-40a1-af25-633458757201]
 Text=QQ影音
 [7a1884a3-f647-49be-b93c-8ffaf4a1f1bf]
 Text=使用PP视频播放
+[8f556da3-987d-47b0-aa88-eb8d52fe1b99]
+Text=迅雷影音
+Icon=..\..\Program\APlayer.exe
+[4d2fba8d-621b-4447-af6d-5794f479c4a5]
+Text=爱奇艺看图
+Icon=..\QyImg.exe
 
 ;----------------美化------------------
-[CF444751-60FC-48B8-AC0F-363063EB2A9E]
+[cf444751-60fc-48b8-ac0f-363063eb2a9e]
 Text=开启桌面整理(电脑管家)
-[B3A2F1A4-10A2-410C-9C19-622B621C61D0]
+[b3a2f1a4-10a2-410c-9c19-622b621c61d0]
 Text=换壁纸(小鸟壁纸)
 [3b7162fb-4389-40c8-83a5-da10d491ec66]
 Text=映射此文件夹到桌面(小智桌面)
@@ -475,6 +488,9 @@ Icon=.\XZDesktop.exe
 [96babf4f-7c38-4885-b407-3800f461669b]
 Text=打开火萤视频桌面
 Icon=..\..\HYVideoDesktop.exe
+[c3c76829-1d8b-49a2-afb4-196c443f1b0b]
+Text=人工桌面
+Icon=.\N0vaDesktop.exe
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
 Icon=.\StartIsBackCfg.exe
@@ -500,7 +516,7 @@ Icon=.\ChromaTune.exe
 Text=右键菜单背景图片插件(第三方)
 
 ;--------------文件处理----------------
-[B298D29A-A6ED-11DE-BA8C-A68E55D89593]
+[b298d29a-a6ed-11de-ba8c-a68e55d89593]
 Text=Notepad++
 [36d94110-787c-4828-9c1b-0dafebc36069]
 Text=EditPlus
@@ -514,7 +530,7 @@ Icon=..\vim.exe
 [ed90173a-3b4c-4e7e-b9cf-79714425d4b5]
 Text=PSPad Editor
 Icon=.\PSPad.exe
-[A3777921-CFD3-4A6B-89BF-08E6B95716E8]
+[a3777921-cfd3-4a6b-89bf-08e6b95716e8]
 Text=格式工厂(&F)
 Icon=.\FormatFactory.exe
 [af9b72b5-f4e4-44b0-a3d9-b55b748efe90]
@@ -544,7 +560,7 @@ Text=File Governor
 Icon=.\FileGovernor.exe
 [1650dc30-2343-498a-b49a-37b90918f611]
 Text=CleanMyPC
-[6CB83A5A-AA68-4895-9F54-175E789AE149]
+[6cb83a5a-aa68-4895-9f54-175e789ae149]
 Text=Balabolka
 Icon=.\balabolka.exe
 [0440049f-d1dc-4e46-b27b-98393d79486b]
@@ -595,13 +611,16 @@ Icon=.\DirListerPro.exe
 [8e57c449-7891-49bb-80e5-ddac375f8ac8]
 Text=使用微表格打开
 Icon=.\microexcel.exe
+[0d8b46ea-7d35-4921-b88c-7e2b1e2d80f0]
+Text=WPS Office
+Icon=..\..\wpsoffice.exe
 
 ;-------------UWP新模块----------------
 [776dbc8d-7347-478c-8d71-791e12ef49d8]
 UwpName=Microsoft.SkypeApp
 Text=@*,-101
 Icon=.\Skype.exe
-[9F156763-7844-4DC4-B2B1-901F640F5155]
+[9f156763-7844-4dc4-b2b1-901f640f5155]
 UwpName=Microsoft.WindowsTerminal
 Text=Open in Windows Terminal
 Icon=.\WindowsTerminal.exe
