--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
-Version=3.1.2.0
-Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.1.2.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).优化部分代码，修复部分Bug。
+Version=3.2.0.0
+Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.2.0.0/ContextMenuManager.zip
+Info=【更新描述】\n(1).优化部分代码，修复部分Bug；\n(2).添加拖拽文件分析菜单功能；\n(3).添加分析自定义注册表路径菜单功能；\n(4).添加隐藏已禁用菜单项目功能。\n(5).添加了翻译程序功能。\n(6).减小了程序文件大小。
