--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,6 @@
+;自3.3.0.0版本以后使用新的更新模块，此文件不再使用
+
 [Update]
-Version=3.2.0.0
-Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.2.0.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).优化部分代码，修复部分Bug；\n(2).添加拖拽文件分析菜单功能；\n(3).添加分析自定义注册表路径菜单功能；\n(4).添加隐藏已禁用菜单项目功能；\n(5).添加了翻译程序功能；\n(6).减小了程序文件大小。
+Version=3.3.0.0
+Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.3.0.0/ContextMenuManager.zip
+Info=【更新描述】\n(1).完善程序更新功能；\n(2).添加下载其他语言功能；\n(3).完善GUID字典功能.\n(4).新增了程序字典.\n(5).修复已知Bug，优化大量代码.
