--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -2,7 +2,7 @@
 ;翻译：可帮助作者为此程序提供翻译并提交到Github，以下内容中等号右侧内容替换为翻译文本，
 ;General-Translator为翻译贡献者，General-Language为语言名称，如en-US 美国英语
 ;翻译文件保存在Config\languages目录中，文件名保存为en-US.ini
-;翻译说明：暂时不翻译的值保留为空即可，字典内赋值换行请使用\n进行转义
+;翻译说明：暂时不翻译的值保留为空即可，字典内赋值换行使用\r\n或\n进行转义
 
 [General]
 Language = zh-CN 简体中文
@@ -51,6 +51,7 @@ IEMenu = IE浏览器
 
 AppSetting = 程序设置
 AppLanguage = 程序语言
+CheckUpdate = 检测更新
 Dictionaries = 程序字典
 AboutApp = 关于程序
 Donate = 捐赠作者
@@ -162,65 +163,68 @@ SelectPerceivedType = 请选择一个文件感知类型
 SelectDirectoryType = 请选择一个目录感知类型
 SelectGroup = 请选择保存分组
 SelectNewItemType = 请选择新建菜单类型
-SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有(推荐),\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择......
 SelectObjectType = 请选择要分析的对象类型
-TranslateTool = 翻译器
+SelectDropEffect = 请选择拖拽文件默认命令
+DefaultDropEffect = 默认(同盘移动、异盘复制)
+CopyDropEffect = 复制(Ctrl)
+MoveDropEffect = 移动(Shift)
+CreateLinkDropEffect = 创建快捷方式(Alt)
+DownloadLanguages = 下载语言文件
+TranslateTool = 翻译工具
 DefaultText = 默认文本
 OldTranslation = 旧译文
 NewTranslation = 新译文
+SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\r\n①该多级菜单的所有子菜单项目私有(推荐),\r\n②该多级菜单可与其他多级菜单引用相同子项,\r\n请做出你的选择......
+DonateInfo = 此名单不定期更新, 上次更新：%date \r\n\r\n累计金额：%money 元, 累计人次：%count 人次
 
-[MessageBox]
-TextCannotBeEmpty = 菜单文本不能为空!
-CommandCannotBeEmpty = 菜单命令不能为空!
-StringParsingFailed = 本地化字符串解析失败!
-TextLengthCannotExceed80 = 菜单文本过长, 长度不允许超过80!
-ConfirmDeletePermanently = 确认是否永久删除此项?\n此操作无法还原,请谨慎操作!
-DeleteButCanRestore = 确认删除此菜单的注册表项目？\n由于启用了自动备份(默认启用),\n删除后可在备份文件夹中还原。
-ConfirmDeleteReference = 确认是否移除对该项目的引用?
-ConfirmDelete = 确认是否删除该项?
-ConfirmDeleteReferenced = 确认是否删除此项?\n所有引用此项的项目都会失效,请谨慎操作!
-CannotAddNewItem = 系统限制子菜单数目最多为16,\n无法添加更多的子菜单项目!
+[Message]
+TextCannotBeEmpty = 菜单文本不能为空！
+CommandCannotBeEmpty = 菜单命令不能为空！
+StringParsingFailed = 本地化字符串解析失败！
+TextLengthCannotExceed80 = 菜单文本过长, 长度不允许超过80！
+ConfirmDeletePermanently = 确认是否永久删除此项？\r\n此操作无法还原,请谨慎操作！
+DeleteButCanRestore = 确认删除此菜单的注册表项目？\r\n由于启用了自动备份(默认启用),\r\n删除后可在备份文件夹中还原。
+ConfirmDeleteReference = 确认是否移除对该项目的引用？
+ConfirmDelete = 确认是否删除该项？
+ConfirmDeleteReferenced = 确认是否删除此项？\r\n所有引用此项的项目都会失效,请谨慎操作！
+CannotAddNewItem = 系统限制子菜单数目最多为16,\r\n无法添加更多的子菜单项目！
 VistaUnsupportedMulti = Vista系统不支持多级菜单！
-CannotHideSubItem = 你的系统版本太低，不支持隐藏子级菜单!
-UnsupportedFilename = 不支持的文件名,\n可能已经存在相同文件名的菜单项目!
-NoOpenModeExtension = 此扩展名没有关联默认打开方式,\n请先为此类型文件关联打开方式!
-CannotChangePath = 不允许更改文件路径!
+CannotHideSubItem = 你的系统版本太低，不支持隐藏子级菜单！
+UnsupportedFilename = 不支持的文件名,\r\n可能已经存在相同文件名的菜单项目！
+NoOpenModeExtension = 此扩展名没有关联默认打开方式,\r\n请先为此类型文件关联打开方式！
+CannotChangePath = 不允许更改文件路径！
 CopiedToClipboard = 已复制到剪切板:
 MalformedGuid = 格式不正确的Guid
-HasBeenAdded = 此项目已被添加!
-EditInitialData = 此程序现仅支持编辑纯文本文件的初始数据,\n其他类型文件请自行编辑注册表"Data"键值,\n请确认是否继续你的操作？
+HasBeenAdded = 此项目已被添加！
+EditInitialData = 此程序现仅支持编辑纯文本文件的初始数据,\r\n其他类型文件请自行编辑注册表"Data"键值,\r\n请确认是否继续你的操作？
 PromptIsOpenItem = 该项为文件或文件夹的"打开"菜单,\n盲目操作可能会导致无法打开文件或文件夹,\n请确认是否继续你的操作？(不建议)
-SelectRegPath = 操作步骤：\n① 打开注册表编辑器(自动)\n② 导航到目标注册表路径\n③ 关闭注册表编辑器窗口\n请确认是否继续？
-RestartApp = 程序将会重新启动!
-UpdateApp = 当前有更新, 是否前往下载?\n更新信息: 版本号
-FileNotExists = 文件不存在!
-FolderNotExists = 文件夹不存在!
-NoUpdateDetected = 未检测到程序更新,\n但已为你更新网络字典文件。
-AuthorityProtection = 此菜单注册表项目可能受安全软件保护,\n无法对其进行禁用删除和其他个性化修改。
-WinXSorted = 为优化排序功能已对部分项目重新编号，\n需要重启文件资源管理器应用效果
-RestoreDefault = 确认还原为默认菜单项目?
-DeleteGroup = 确认永久删除此组及组内所有菜单项目?
+SelectRegPath = 操作步骤：\r\n① 打开注册表编辑器(自动)\r\n② 导航到目标注册表路径\r\n③ 关闭注册表编辑器窗口\n请确认是否继续？
+RestartApp = 程序将会重新启动！
+FileNotExists = 文件不存在！
+FolderNotExists = 文件夹不存在！
+UpdateInfo = 【检测更新】\r\n当前版本：%v1\r\n最新版本：%v2\r\n是否立即下载更新？
+UpdateSucceeded = 程序更新成功！
+VersionIsLatest = 当前版本为最新版！
+AuthorityProtection = 此菜单注册表项目可能受安全软件保护,\r\n无法对其进行禁用删除和其他个性化修改。
+WinXSorted = 为优化排序功能已对部分项目重新编号，\r\n需要重启文件资源管理器应用效果
+RestoreDefault = 确认还原为默认菜单项目？
+DeleteGroup = 确认永久删除此组及组内所有菜单项目？
 
 [Tip]
-RestartExplorer = 重启Explorer会使桌面闪烁片刻, 正常现象无需担心,\n或者你也可以稍后重启或注销计算机使你的操作生效
-CustomFolder = 禁用此项将会同时禁用文件系统\n对象属性面板中的自定义选项卡
-SendToDrive = 仅当插入可移动磁盘时有作用,\n显示该可移动磁盘的所有分区
-BuildSendtoMenu = 禁用此项将加快主菜单弹出速度\n但会延缓发送到子菜单弹出速度
-InvalidItem = 无效菜单项目将导致此项以下的\n所有菜单项目不可见(建议删除)
+RestartExplorer = 重启Explorer会使桌面闪烁片刻, 正常现象无需担心,\r\n或者你也可以稍后重启或注销计算机使你的操作生效
+CustomFolder = 禁用此项将会同时禁用文件系统\r\n对象属性面板中的自定义选项卡
+SendToDrive = 仅当插入可移动磁盘时有作用,\r\n显示该可移动磁盘的所有分区
+BuildSendtoMenu = 禁用此项将加快主菜单弹出速度\r\n但会延缓发送到子菜单弹出速度
+InvalidItem = 无效菜单项目将导致此项以下的\r\n所有菜单项目不可见(建议删除)
 EditSubItems = 编辑子菜单项目
 AddReference = 从公共引用项目中添加引用
 AddFromParentMenu = 从母菜单中复制项目
 AddSeparator = 添加分隔线
 DeleteGuidDic = 删除用户自行添加的该项的本地Guid字典
-LockNewMenu = 启用后可阻止第三方程序增加项目\n且可对现有项目排序(关闭后复原)
+LockNewMenu = 启用后可阻止第三方程序增加项目\r\n且可对现有项目排序(关闭后复原)
 DropOrSelectObject = 请拖拽或通过按钮选择文件或目录
-CheckUpdate = 程序每月自动检测一次更新 (启动程序时)\n你可手动点击浏览Github、Gitee检查更新
-LastCheckUpdateTime = 上次自动更新检查时间：
-OpenLanguagesDir = 打开语言文件夹
-OtherLanguages = 下载或上传其他语言文件
-OpenDictionariesDir = 打开字典文件夹
-ConfigPath = 更改配置和数据文件保存路径后,\n会导致部分已启用增强菜单失效,\n可在增强菜单中重新启用一遍
-CommandFiles = 此命令依赖配置文件，移动配置文件位置\n会导致此菜单项失效，重新启用一遍即可
+ConfigPath = 更改配置和数据文件保存路径后,\r\n会导致部分已启用增强菜单失效,\r\n可在增强菜单中重新启用一遍
+CommandFiles = 此命令依赖配置文件，移动配置文件位置\r\n会导致此菜单项失效，重新启用一遍即可
 CreateGroup = 新建一个分组
 
 [Other]
@@ -254,27 +258,33 @@ WinXSortable = 启用 WinX 菜单排序功能
 ShowFilePath = 状态栏实时显示文件路径
 OpenMoreRegedit = 允许注册表编辑器多开
 RestartExplorer = 当前部分操作需要重启文件资源管理器生效
+UserDictionaries = 用户字典
 DictionaryDescription = 字典说明
 GuidInfosDictionary = GUID信息
+UWPMode = UWP模块
 Translators = 翻译贡献者
 DonationList = 捐赠名单
 ConfigPath = 配置和数据文件保存位置
 AppDataDir = AppData 目录
 AppDir = 程序所在目录
-OpenConfigDir = 打开配置文件所在目录
 AutoBackup = 删除菜单时自动备份注册表
-OpenBackupDir = 打开备份文件夹
-CheckUpdate = 检查程序及字典更新
-ImmediatelyCheckUpdate = 立即检查
+SetUpdateFrequency = 设置自动检测更新频率
+OnceAWeek = 每周一次
+OnceAMonth = 每月一次
+OnceASeason = 每季一次
+NeverCheck = 从不检查
+ImmediatelyCheck = 立即检查
+SetRequestRepo = 设置程序访问的存储库站点
 ProtectOpenItem = 保护 "打开" 菜单项目
-WebSearchEngine = 网页搜索使用的搜索引擎
+WebSearchEngine = 设置网页搜索使用的搜索引擎
 CustomEngine = 自定义
-SetCustomEngine = 设定搜索引擎 (以 %s 代替搜索关键词)
+SetCustomEngine = 设置搜索引擎 (以 %s 代替搜索关键词)
 HideDisabledItems = 不显示已禁用的菜单项目
 SetPerceivedType = 设置扩展名为 %s 的文件感知类型为
+SetDefaultDropEffect = 设置文件对象默认拖拽命令为
 
-AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、8、8.1、10、Vista\n 2.适用于 64bit、32bit CPU 操作系统\n 3.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform 程序\n 2.Github 仓库: https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee 仓库: https://gitee.com/BluePointLilac/ContextMenuManager \n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站: https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.QQ邮箱: 1617859183@qq.com\n\n【资源引用】\n 1.程序主图标来自: https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序按钮图标主要来自阿里巴巴矢量图标库: https://www.iconfont.cn/ \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用/禁用开关。
+AboutApp = 【主要功能】\r\n 1.管理常见位置右键菜单\r\n 2.自定义添加右键菜单\r\n\r\n【兼容性能】\r\n 1.适用于Win7、8、8.1、10、Vista \r\n 2.适用于 64bit、32bit CPU 操作系统\r\n 3.适配高分屏，最佳缩放比为150%\r\n\r\n【代码开源】\r\n 1.代码语言：C Sharp, Winform 程序, MIT 开源协议\r\n 2.Github 仓库：https://github.com/BluePointLilac/ContextMenuManager \r\n 3.Gitee 仓库：https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n【温馨提示】\r\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\r\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\r\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\r\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\r\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\r\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\r\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用\禁用开关。
 
-Dictionaries = 【字典说明】\n 此程序拥有几个字典文件, 每份字典又有用户字典和网络字典\n 如果想为此程序添加字典可右键保存文件, 并按照文件内说明进行添加\n 可将你的字典发送到我的邮箱或提交到Github为此项目做出你的贡献\n 右侧选项卡中为原始字典内容, 你可以切换选项卡进行查看\n\n【字典内容】\n 1.程序显示文本语言字典 (Languages目录)\n 2.ShellEx菜单项GUID文本图标字典 (GuidInfosDic.ini)\n 3.第三方程序菜单内部设置字典 (ThirdRulesDic.xml)\n 4.增强菜单项目字典 (EnhanceMenusDic.xml)
+Dictionaries = 【字典说明】\r\n 此程序拥有几个字典文件, 每份字典又有用户字典(User目录)和网络字典(Web目录)\r\n 如果想为此程序添加字典可右键保存文件至User目录, 并按照文件内说明进行添加\r\n 你可以将你的字典发送到我的邮箱或者提交合并到Github为此项目做出你的贡献\n 右侧选项卡中为原始字典内容, 你可以切换选项卡进行查看和右键编辑、保存操作\r\n\r\n【字典内容】\r\n 1.程序显示文本语言字典 (Languages目录)\r\n 2.ShellEx菜单项GUID文本图标字典 (GuidInfosDic.ini)\r\n 3.第三方程序菜单内部设置字典 (ThirdRulesDic.xml)\r\n 4.增强菜单项目字典 (EnhanceMenusDic.xml)\r\n 5.UWP新模块字典 (UWPModeItemsDic.xml)
 
-Donate = 此程序完全免费，如果你觉得这个软件对你有所帮助, 你可以通过扫描\n下方二维码(微信、支付宝、腾讯QQ)进行捐赠, 金额请随意, 谢谢支持！\n也期待你在Github或者Gitee上为此程序项目点亮Star (这对我很重要!)
+Donate = 此程序完全免费，如果你觉得这个软件对你有所帮助, 你可以通过扫描\r\n下方二维码(微信、支付宝、腾讯QQ)进行捐赠, 金额请随意, 谢谢支持！\r\n也期待你在Github或者Gitee上为此程序项目点亮Star (这对我很重要！)
