--- a/Update.ini
+++ b/Update.ini
@@ -3,4 +3,4 @@
 [Update]
 Version=3.3.0.0
 Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.3.0.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).完善程序更新功能；\n(2).添加下载其他语言功能；\n(3).完善GUID字典功能.\n(4).新增了程序字典.\n(5).修复已知Bug，优化大量代码.
+Info=【更新描述】\n(1).完善程序更新功能；\n(2).添加下载其他语言功能；\n(3).完善GUID字典功能；\n(4).新增了程序字典；\n(5).修复已知Bug，优化大量代码。
